[project]
name = "knightstar-pulumi-utils"
version = "0.1.0"
description = "Shared helpers for KnightStar Digital Pulumi stacks"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "knightstar_pulumi_utils", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
